--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.5.0",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
